# Salamander2D

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
include/: Basic.h  Math.h  MathUtil.h  Renderer2D.h  Salamander2D.h  Util.h  Window.h
src/: Renderer2D.cpp  Util.cpp  Window.cpp
